Fix: Update Swagger JSON to prevent overflow (#442)
